--- a/MailSender/MailSender.csproj
+++ b/MailSender/MailSender.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome5" Version="2.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Media\add.png" />
     <Resource Include="Media\calendary.png" />
     <Resource Include="Media\clock.png" />
