--- a/MailSender/MailSender.csproj
+++ b/MailSender/MailSender.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.1.0" />
     <PackageReference Include="FontAwesome5" Version="2.1.2" />
   </ItemGroup>
 
