--- a/MailSender/MailSender.csproj
+++ b/MailSender/MailSender.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.1.0" />
+    <PackageReference Include="DotNetProjects.Extended.Wpf.Toolkit" Version="4.6.97" />
     <PackageReference Include="FontAwesome5" Version="2.1.2" />
   </ItemGroup>
 
